--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,6 +18,8 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    outputs:
+      script-file: ${{ steps.publish.outputs.file-name }}
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -25,6 +27,9 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: Publish JS filename
+        id: publish # mandatory id for the above outputs.scriptfile
+        run: find dist/assets/*.js -type f -execdir echo 'file-name={}' >> $GITHUB_OUTPUT ';'
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -41,7 +46,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: dist-files
-      - name:
+      - name: Output filename
+        run: echo "${{ needs.build.outputs.script-file }}" # takes the value from the previous job on which it depends (needs.build)
+      - name: Output Contents
         run: ls
       - name: Deploy
         run: echo "Deploying..."
