--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,6 +9,12 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+        # A new step should be introduced here for caching the dependecies
+      - name: Cache Dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm # This is the path in which the npm dependencies are stored for this project
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }} # For retrieing this cache in the future  
       - name: Install dependencies
         run: npm ci
       - name: Lint code
@@ -23,6 +29,12 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+        # Should be stated here as well
+      - name: Cache Dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm 
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }} # For retrieing this cache in the future  
       - name: Install dependencies
         run: npm ci
       - name: Build website
